Fix img size on mobile view

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -132,9 +132,10 @@ section p {
 
 section img {
     margin: 2rem;
-    height: 60%;
-    width: 250px;
+    height: auto;
+    width: 80%;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.418);
+    text-align: center;
 }
 
 
